<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="7"
    android:id="@+id/activity_item_edit"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context="com.example.dfrie.todoorganizer.ItemEditActivity">

    <TextView
        android:text="@string/due_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="1"
        android:layout_marginTop="20dp"
        android:id="@+id/tvDueDate"
        android:layout_marginRight="10dp" />

    <TextView
        android:text="@string/details_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="2"
        android:layout_marginTop="20dp"
        android:id="@+id/tvDetails"
        android:layout_marginRight="10dp" />

    <TextView
        android:text="@string/status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:layout_marginTop="10dp"
        android:id="@+id/tvStatus"
        android:layout_marginRight="10dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/etDueDate"
            android:layout_marginTop="8dp"
            android:width="@android:dimen/thumbnail_width" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_ellipse"
            android:id="@+id/button_ellipse"
            android:onClick="showDatePickerDialog"
            style="?android:attr/buttonStyleSmall"/>
    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:id="@+id/etDetails"
        android:layout_marginTop="8dp" />

    <TextView
        android:text="@string/priority_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPriority"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spStatus"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:layout_marginTop="8dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/etTaskName"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="12dp"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="0" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spPriority"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:layout_marginTop="18dp" />

    <Button
        android:text="@string/save_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="6"
        android:layout_marginBottom="65dp"
        android:id="@+id/buttonSave"
        android:layout_marginTop="12dp"
        tools:layout_gravity="center" />

    <TextView
        android:text="@string/alert_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:layout_marginTop="10dp"
        android:id="@+id/tvAlert"
        android:layout_marginRight="10dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="5">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spAlert"
            android:layout_gravity="left|top"
            android:layout_marginTop="8dp" />

        <TextView
            android:text="@string/days_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="8dp"
            android:id="@+id/tvDays" />

    </LinearLayout>

    <TextView
        android:text="@string/task_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTaskName"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="0"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp" />

</GridLayout>
